name:                nagger
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/regellosigkeitsaxiom/nagger#readme
license:             BSD3
license-file:        LICENSE
author:              Valentin Shirokov
maintainer:          regellosigkeitsaxiom@yandex.ru
copyright:           2017 Valentin Shirokov
category:            private
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nag
  hs-source-dirs:      src
  other-modules:       Types
                     , Actions
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , yaml
                     , process
                     , directory
                     , rainbow
                     , random
                     , random-shuffle
